final-project/Agent-Bomber/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");

* {
  font-family: "Press Start 2P", cursive;
}

body {
  background-image: url("../images/agentbomber-backdrop.png");
}

/* GAME ENVIRONMENT */
#game {
  max-width: 100%;
}

#main {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#game {
  position: relative;
  display: inline-grid;
}

.grid {
  display: block;
}

.top-wall {
  background-image: url("../images/top-wall.png");
}

.side-wall {
  background-image: url("../images/side-wall.png");
}

.background-wall {
  background-image: url("../images/background-tile.png");
}

.metal-wall {
  background-image: url("../images/top-wall.png");
}

.brick-wall {
  background-image: url("../images/brick-wall.png");
  z-index: 2;
}

.movable-wall {
  background-image: url("../images/movable-wall.png");
}

/* DISPLAY BOX  */

#display-box-wrapper {
  margin-top: 50px;
  margin-bottom: 10px;
  display: flex;
  width: 40em;
}

#score-box {
  flex: 15%;
  /* height: 60px; */
  padding: 10px;
  margin-right: 30px;
  /* background-color: #c9cacc; */
  background-repeat: no-repeat;
  background-image: url("../images/scoreboard.png");
}

#power-ups-box {
  flex: 45%;
  padding: 10px;
  background-image: url("../images/powerupboard.png");
}

.power-up-images {
  margin-left: 10px;
  margin-right: 90px;
}

/* pacman */

.agent {
  position: absolute;
  width: 50px;
  height: 50px;
  background-image: url(../images/agent-sprite.png);
}

/* bomb and explosion*/

.bomb {
  position: absolute;
  width: 50px;
  height: 50px;
  background-image: url("../images/bomb-sprite.png");
}

.left-explosion {
  position: absolute;
  width: 150px;
  height: 50px;
  background-image: url("../images/bomb-blast-sprite.png");
  transform: rotate(180deg);
}

.top-explosion {
  position: absolute;
  width: 150px;
  height: 50px;
  background-image: url("../images/bomb-blast-sprite.png");
  transform: rotate(270deg);
}

.bomb-power-up {
  position: absolute;
  width: 50px;
  height: 50px;
  background-image: url("../images/bomb-power-up.png");
}

.bomb-power-up-count {
  position: absolute;
  margin-left: 3em;
  top: 75px;
  font-size: 30px;
}

/* enemies  */

.enemy-one {
  width: 50px;
  height: 50px;
  background-image: url("../images/enemy-one.png");
}

.display-score {
  font-size: 30px;
  margin-top: 30px;
  margin-left: 15px;
}

.enemy-two {
  width: 50px;
  height: 50px;
  background-image: url("../images/enemy-medusa.png");
}

/* random movement  */
.enemy-three {
  width: 50px;
  height: 50px;
  background-image: url("../images/enemy-annihilator-sprite.png");
}

/* Game Over Screen  */
.button-container-last {
  width: 80%;
  margin: 0 auto;
}

.game-over-screen {
  background-image: url("../images/gameover-alert.png");
  width: 850px;
  height: 550px;
}

.game-over-screen-score {
  text-align: center;
  font-size: 40px;
  color: white;
}

.play-again-button {
  background-image: url("../images/playagain-button.png");
  background-repeat: no-repeat;
  width: 32%;
  height: 44px;
  margin-left: 16em;
  margin-top: 24em;
  border: none;
  cursor: pointer;
}

.play-again-button:hover {
  opacity: 0.8;
}

.score-container {
  width: 80%;
  margin: 0 auto;
  margin-top: 4em;
}

.high-score-container {
  width: 80%;
  margin: 0 auto;
  margin-top: 2em;
}

.opening-screen {
  background-image: url("../images/opening-image.png");
  width: 850px;
  height: 550px;
  background-repeat: no-repeat;
  background-position-x: 0;
  background-position-y: 0;
  background-size: contain;
  display: inline-block;
  margin: 0 auto;
}

.game-win-screen {
  background-image: url("../images/gamewin-alert.png");
  width: 850px;
  height: 550px;
}

.button-container {
  width: 80%;
  margin: 0 auto;
  margin-top: 27em;
}

.classic-mode {
  background-image: url("../images/classicmode-button.png");
  width: 44%;
  height: 51px;
  background-repeat: no-repeat;
  border: none;
  cursor: pointer;
}

.classic-mode:hover {
  opacity: 0.8;
}

.extreme-mode {
  background-image: url("../images/extrememode-button.png");
  width: 44%;
  height: 51px;
  background-repeat: no-repeat;
  border: none;
  cursor: pointer;
  float: right;
}

.extreme-mode:hover {
  opacity: 0.8;
}

/* Box power up  */

.box-power-up-one {
  height: 50px;
  width: 50px;
  background-image: url("../images/boxPowerUp.png");
}

.box-power-up-two {
  height: 50px;
  width: 50px;
  background-image: url("../images/boxPowerUp.png");
}

.box-power-up-count {
  font-size: 30px;
  position: absolute;
  top: 75px;
  margin-left: 9em;
}

/* Evil Machine  */

.evil-machine {
  height: 50px;
  width: 50px;
  background-image: url("../images/agentbomber-evilmachine.png");
}

